--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     /* feel free to change height */
-    height: 5000px;
+    height: 2000px;
     background: linear-gradient( to bottom, orange, darkblue);
 }
 
@@ -22,6 +22,15 @@ h1 {
     top: 50%;
     left: 50%;
     width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+}
+
+#name-svg {
+    position: fixed;
+    top: 20%;
+    left: 25%;
+    width: 500px;
     height: 150px;
     margin: -75px 0 0 -75px;
 }
